--- a/index.html
+++ b/index.html
@@ -113,17 +113,19 @@
                 <h2 class="shelf__title">Currently reading</h2>
               </div>
               <div class="shelf__row">
-                <div class="books">
-                  <div class="book" data-id="b1" data-title="Atomic Habits" data-author="James Clear" title="Atomic Habits — James Clear">
-                    <img class="book__img" loading="lazy" alt="Atomic Habits cover" src="atomichabits.jpg">
-                  </div>
-                  <div class="book" data-id="b2" data-title="Dune" data-author="Frank Herbert" title="Dune — Frank Herbert">
-                    <img class="book__img" loading="lazy" alt="Dune cover" src="dune.jpg">
-                  </div>
-                  <div class="book" data-id="b3" data-title="Clean Code" data-author="Robert C. Martin" title="Clean Code — Robert C. Martin">
-                    <img class="book__img" loading="lazy" alt="Clean Code cover" src="cleancode.jpg">
-                  </div>
-                </div>
+              <div class="books">
+  <a class="book" href="book.html?id=b1" data-id="b1" data-title="Atomic Habits" data-author="James Clear" title="Atomic Habits — James Clear">
+    <img class="book__img" loading="lazy" alt="Atomic Habits cover" src="atomichabits.jpg">
+  </a>
+
+  <a class="book" href="book.html?id=b2" data-id="b2" data-title="Dune" data-author="Frank Herbert" title="Dune — Frank Herbert">
+    <img class="book__img" loading="lazy" alt="Dune cover" src="dune.jpg">
+  </a>
+
+  <a class="book" href="book.html?id=b3" data-id="b3" data-title="Clean Code" data-author="Robert C. Martin" title="Clean Code — Robert C. Martin">
+    <img class="book__img" loading="lazy" alt="Clean Code cover" src="cleancode.jpg">
+  </a>
+</div>
                 <div class="board"></div>
               </div>
             </section>
