Log in and Registering added

--- a/index.html
+++ b/index.html
@@ -482,6 +482,9 @@
                 <div class="profile-header__badge">Premium Member</div>
               </div>
               <button class="profile-header__edit">Edit Profile</button>
+              <button class="profile-header__logout" style="background: #ef4444; color: white; margin-top: 10px;">
+                Sign Out
+              </button>
             </div>
 
             <div class="profile-stats">
