--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
                 <div class="profile-header__badge">Premium Member</div>
               </div>
               <button class="profile-header__edit">Edit Profile</button>
-              <button class="profile-header__logout" style="background: #ef4444; color: white; margin-top: 10px;">
+              <button class="profile-header__logout"  id="logoutBtn" >
                 Sign Out
               </button>
             </div>
