--- a/book.html
+++ b/book.html
@@ -26,21 +26,21 @@
       b1: {
         title: "Atomic Habits",
         author: "James Clear",
-        cover: "atomichabits.jpg",
+        cover: "books-images/atomichabits.jpg",
         desc: "Tiny changes, remarkable results. A supremely practical guide on how to build good habits and break bad ones.",
         read: "#"
       },
       b2: {
         title: "Dune",
         author: "Frank Herbert",
-        cover: "dune.jpg",
+        cover: "books-images/dune.jpg",
         desc: "A sweeping science-fiction epic of politics, religion, and giant sandworms on the desert planet Arrakis.",
         read: "#"
       },
       b3: {
         title: "Clean Code",
         author: "Robert C. Martin",
-        cover: "cleancode.jpg",
+        cover: "books-images/cleancode.jpg",
         desc: "Agile software craftsmanship: how to write code that is readable, maintainable, and elegant.",
         read: "#"
       }
