--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <header class="topbar">
         <div class="mobile-brand" aria-label="ReadOwl">
           <div class="mobile-brand__logo" aria-hidden="true">
-            <img src="owl-svgrepo-com (1).svg" alt="" />
+            <img src="assets/owl-svgrepo-com.svg" alt="" />
           </div>
           <div class="mobile-brand__name">ReadOwl</div>
         </div>
@@ -23,7 +23,7 @@
       <aside class="sidebar" aria-label="Primary navigation">
         <div class="brand">
           <div class="brand__logo" aria-hidden="true">
-            <img src="owl-svgrepo-com (1).svg" alt="ReadOwl icon" class="brand__owl">
+            <img src="assets/owl-svgrepo-com.svg" alt="ReadOwl icon" class="brand__owl">
           </div>
           <div class="brand__name">ReadOwl</div>
         </div>
@@ -115,15 +115,15 @@
               <div class="shelf__row">
               <div class="books">
   <a class="book" href="book.html?id=b1" data-id="b1" data-title="Atomic Habits" data-author="James Clear" title="Atomic Habits — James Clear">
-    <img class="book__img" loading="lazy" alt="Atomic Habits cover" src="atomichabits.jpg">
+    <img class="book__img" loading="lazy" alt="Atomic Habits cover" src="books-images/atomichabits.jpg">
   </a>
 
   <a class="book" href="book.html?id=b2" data-id="b2" data-title="Dune" data-author="Frank Herbert" title="Dune — Frank Herbert">
-    <img class="book__img" loading="lazy" alt="Dune cover" src="dune.jpg">
+    <img class="book__img" loading="lazy" alt="Dune cover" src="books-images/dune.jpg">
   </a>
 
   <a class="book" href="book.html?id=b3" data-id="b3" data-title="Clean Code" data-author="Robert C. Martin" title="Clean Code — Robert C. Martin">
-    <img class="book__img" loading="lazy" alt="Clean Code cover" src="cleancode.jpg">
+    <img class="book__img" loading="lazy" alt="Clean Code cover" src="books-images/cleancode.jpg">
   </a>
 </div>
                 <div class="board"></div>
@@ -170,7 +170,7 @@
               <div class="trending-books">
                 <div class="trending-book">
                   <div class="trending-book__cover">
-                    <img src="sevenhusbands.jpg" alt="The Seven Husbands of Evelyn Hugo" />
+                    <img src="books-images/sevenhusbands.jpg" alt="The Seven Husbands of Evelyn Hugo" />
                   </div>
                   <div class="trending-book__info">
                     <div class="trending-book__title">The Seven Husbands of Evelyn Hugo</div>
@@ -180,7 +180,7 @@
                 </div>
                 <div class="trending-book">
                   <div class="trending-book__cover">
-                    <img src="hailmary.jpg" alt="Project Hail Mary" />
+                    <img src="books-images/hailmary.jpg" alt="Project Hail Mary" />
                   </div>
                   <div class="trending-book__info">
                     <div class="trending-book__title">Project Hail Mary</div>
@@ -190,7 +190,7 @@
                 </div>
                 <div class="trending-book">
                   <div class="trending-book__cover">
-                    <img src="midnight.jpg" alt="The Midnight Library" />
+                    <img src="books-images/midnight.jpg" alt="The Midnight Library" />
                   </div>
                   <div class="trending-book__info">
                     <div class="trending-book__title">The Midnight Library</div>
@@ -200,7 +200,7 @@
                 </div>
                 <div class="trending-book">
                   <div class="trending-book__cover">
-                    <img src="kazuoishi.jpg" alt="Klara and the Sun" />
+                    <img src="books-images/kazuoishi.jpg" alt="Klara and the Sun" />
                   </div>
                   <div class="trending-book__info">
                     <div class="trending-book__title">Klara and the Sun</div>
@@ -247,7 +247,7 @@
               <div class="recommendations-grid">
                 <div class="recommendation-card">
                   <div class="recommendation-card__cover">
-                    <img src="psychology.jpg" alt="The Psychology of Money" />
+                    <img src="books-images/psychology.jpg" alt="The Psychology of Money" />
                   </div>
                   <div class="recommendation-card__content">
                     <div class="recommendation-card__title">The Psychology of Money</div>
@@ -257,7 +257,7 @@
                 </div>
                 <div class="recommendation-card">
                   <div class="recommendation-card__cover">
-                    <img src="thinkingfast.jpg" alt="Thinking, Fast and Slow" />
+                    <img src="books-images/thinkingfast.jpg" alt="Thinking, Fast and Slow" />
                   </div>
                   <div class="recommendation-card__content">
                     <div class="recommendation-card__title">Thinking, Fast and Slow</div>
@@ -267,7 +267,7 @@
                 </div>
                 <div class="recommendation-card">
                   <div class="recommendation-card__cover">
-                    <img src="educated.jpg" alt="Educated" />
+                    <img src="books-images/educated.jpg" alt="Educated" />
                   </div>
                   <div class="recommendation-card__content">
                     <div class="recommendation-card__title">Educated</div>
@@ -306,7 +306,7 @@
             <div class="shop-grid">
               <div class="shop-book" data-genre="Fiction">
                 <div class="shop-book__cover">
-                  <img src="sevenhusbands.jpg" alt="The Seven Husbands of Evelyn Hugo" />
+                  <img src="books-images/sevenhusbands.jpg" alt="The Seven Husbands of Evelyn Hugo" />
                 </div>
                 <div class="shop-book__info">
                   <div class="shop-book__title">The Seven Husbands of Evelyn Hugo</div>
@@ -320,7 +320,7 @@
               </div>
               <div class="shop-book" data-genre="Sci-Fi">
                 <div class="shop-book__cover">
-                  <img src="hailmary.jpg" alt="Project Hail Mary" />
+                  <img src="books-images/hailmary.jpg" alt="Project Hail Mary" />
                 </div>
                 <div class="shop-book__info">
                   <div class="shop-book__title">Project Hail Mary</div>
@@ -334,7 +334,7 @@
               </div>
               <div class="shop-book" data-genre="Fiction">
                 <div class="shop-book__cover">
-                  <img src="midnight.jpg" alt="The Midnight Library" />
+                  <img src="books-images/midnight.jpg" alt="The Midnight Library" />
                 </div>
                 <div class="shop-book__info">
                   <div class="shop-book__title">The Midnight Library</div>
@@ -348,7 +348,7 @@
               </div>
               <div class="shop-book" data-genre="Sci-Fi">
                 <div class="shop-book__cover">
-                  <img src="kazuoishi.jpg" alt="Klara and the Sun" />
+                  <img src="books-images/kazuoishi.jpg" alt="Klara and the Sun" />
                 </div>
                 <div class="shop-book__info">
                   <div class="shop-book__title">Klara and the Sun</div>
@@ -362,7 +362,7 @@
               </div>
               <div class="shop-book" data-genre="Non-Fiction">
                 <div class="shop-book__cover">
-                  <img src="psychology.jpg" alt="The Psychology of Money" />
+                  <img src="books-images/psychology.jpg" alt="The Psychology of Money" />
                 </div>
                 <div class="shop-book__info">
                   <div class="shop-book__title">The Psychology of Money</div>
@@ -376,7 +376,7 @@
               </div>
               <div class="shop-book" data-genre="Non-Fiction">
                 <div class="shop-book__cover">
-                  <img src="thinkingfast.jpg" alt="Thinking, Fast and Slow" />
+                  <img src="books-images/thinkingfast.jpg" alt="Thinking, Fast and Slow" />
                 </div>
                 <div class="shop-book__info">
                   <div class="shop-book__title">Thinking, Fast and Slow</div>
