--- a/reader.html
+++ b/reader.html
@@ -18,9 +18,9 @@
 
   <script>
     const map = {
-      b1: { file: "atomic-habits.pdf",  title: "Atomic Habits" },
-      b2: { file: "dune.pdf",           title: "Dune" },
-      b3: { file: "clean-code.pdf",     title: "Clean Code" }
+      b1: { file: "pdf-books/atomic-habits.pdf",  title: "Atomic Habits" },
+      b2: { file: "pdf-books/dune.pdf",           title: "Dune" },
+      b3: { file: "pdf-books/clean-code.pdf",     title: "Clean Code" }
     };
 
     const id  = new URLSearchParams(location.search).get("id");
