--- a/register.html
+++ b/register.html
@@ -13,7 +13,7 @@
   <div class="auth-container">
     <div class="auth-header">
       <div class="auth-logo">
-        <img src="owl-svgrepo-com (1).svg" alt="ReadOwl"/>
+        <img src="assets/owl-svgrepo-com.svg" alt="ReadOwl"/>
         <h1>ReadOwl</h1>
       </div>
       <h2>Join ReadOwl</h2>
