next up, finished, desc of books in the shop

--- a/book.html
+++ b/book.html
@@ -37,11 +37,39 @@
         desc: "A sweeping science-fiction epic of politics, religion, and giant sandworms on the desert planet Arrakis.",
         read: "#"
       },
-      b3: {
+       b3: {
         title: "Clean Code",
         author: "Robert C. Martin",
         cover: "books-images/cleancode.jpg",
         desc: "Agile software craftsmanship: how to write code that is readable, maintainable, and elegant.",
+        read: "#"
+      },
+      b4: {
+        title: "The Midnight Library",
+        author: "Matt Haig",
+        cover: "books-images/midnight.jpg",
+        desc: "A novel about parallel lives and second chances when a woman explores all the lives she could have lived.",
+        read: "#"
+      },
+      b5: {
+        title: "The Psychology of Money",
+        author: "Morgan Housel",
+        cover: "books-images/psychology.jpg",
+        desc: "Timeless lessons on wealth, greed, and happiness with memorable short stories about money.",
+        read: "#"
+      },
+      b6: {
+        title: "The Seven Husbands of Evelyn Hugo",
+        author: "Taylor Jenkins Reid",
+        cover: "books-images/sevenhusbands.jpg",
+        desc: "A glamorous Hollywood legend reveals the story behind her seven husbands and one great love.",
+        read: "#"
+      },
+      b7: {
+        title: "Thinking, Fast and Slow",
+        author: "Daniel Kahneman",
+        cover: "books-images/thinkingfast.jpg",
+        desc: "A tour of the mind’s two systems: fast intuition and slow deliberation, and how they shape our decisions.",
         read: "#"
       }
     };
